--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Valentine</title>
+
+<!-- Cute Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
 <style>
     body {
         margin: 0;
@@ -11,43 +15,64 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: Arial, sans-serif;
+        font-family: 'Pacifico', cursive;
         overflow: hidden;
     }
 
     .popup {
         background: white;
-        padding: 40px;
-        border-radius: 20px;
+        padding: 60px;
+        border-radius: 30px;
         text-align: center;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+        box-shadow: 0 20px 50px rgba(0,0,0,0.25);
+        width: 600px;
+        max-width: 90%;
     }
 
     h1 {
         margin-bottom: 30px;
         color: #ff4d6d;
+        font-size: 48px;
+    }
+
+    .image {
+        width: 100%;
+        max-width: 350px;
+        border-radius: 20px;
+        margin-bottom: 25px;
     }
 
     .yes {
-        font-size: 30px;
-        padding: 18px 50px;
+        font-size: 36px;
+        padding: 20px 60px;
         background: #ff4d6d;
         color: white;
         border: none;
-        border-radius: 12px;
+        border-radius: 15px;
         cursor: pointer;
-        margin: 10px;
+        margin: 15px;
     }
 
     .no {
         position: absolute;
-        font-size: 12px;
-        padding: 5px 10px;
+        font-size: 14px;
+        padding: 8px 15px;
         background: gray;
         color: white;
         border: none;
-        border-radius: 8px;
+        border-radius: 10px;
         cursor: pointer;
+    }
+
+    .final-message {
+        color: white;
+        font-size: 120px;
+        text-align: center;
+        width: 100%;
+        height: 50vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 </style>
 </head>
@@ -55,6 +80,10 @@
 
 <div class="popup">
     <h1>Will you be my Valentine?</h1>
+
+    <!-- Your image -->
+    <img src="image.png" class="image">
+
     <button class="yes" onclick="yesClicked()">YES</button>
 </div>
 
@@ -62,8 +91,36 @@
 
 <script>
 function yesClicked() {
-    document.body.innerHTML =
-    "<h1 style='color:white;font-size:50px;'>Yaaay! ❤️</h1>";
+    document.body.innerHTML = `
+        <div style="
+            height:100vh;
+            background:linear-gradient(135deg,#ff758c,#ff7eb3);
+            display:flex;
+            flex-direction:column;
+            justify-content:center;
+            align-items:center;
+            color:white;
+            font-family:'Pacifico',cursive;
+            text-align:center;
+        ">
+            <div style="font-size:100px; margin-bottom:20px;">
+                Lucky You ❤️
+            </div>
+
+            <img src="us.jpg" style="
+                width:300px;
+                max-width:80%;
+                border-radius:25px;
+                box-shadow:0 20px 40px rgba(0,0,0,0.3);
+            ">
+
+            <div style="font-size:40px; margin-top:20px;">
+                Now you’re stuck with me
+            </div>
+        </div>
+    `;
+}
+
 }
 
 const noBtn = document.getElementById("noBtn");
