--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Valentine</title>
 
-<!-- Cute Google Font -->
+<!-- Cute Font -->
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
 <style>
@@ -22,57 +22,76 @@
     .popup {
         background: white;
         padding: 60px;
-        border-radius: 30px;
+        border-radius: 35px;
         text-align: center;
-        box-shadow: 0 20px 50px rgba(0,0,0,0.25);
-        width: 600px;
-        max-width: 90%;
+        box-shadow: 0 25px 60px rgba(0,0,0,0.3);
+        width: 650px;
+        max-width: 92%;
     }
 
     h1 {
-        margin-bottom: 30px;
         color: #ff4d6d;
-        font-size: 48px;
+        font-size: 52px;
+        margin-bottom: 30px;
     }
 
-    .image {
+    .popup img {
         width: 100%;
-        max-width: 350px;
-        border-radius: 20px;
-        margin-bottom: 25px;
+        max-width: 380px;
+        border-radius: 25px;
+        margin-bottom: 30px;
     }
 
     .yes {
-        font-size: 36px;
-        padding: 20px 60px;
+        font-size: 38px;
+        padding: 22px 70px;
         background: #ff4d6d;
         color: white;
         border: none;
-        border-radius: 15px;
+        border-radius: 18px;
         cursor: pointer;
-        margin: 15px;
+        box-shadow: 0 10px 20px rgba(255,77,109,0.5);
     }
 
     .no {
         position: absolute;
         font-size: 14px;
-        padding: 8px 15px;
-        background: gray;
+        padding: 6px 14px;
+        background: #777;
         color: white;
         border: none;
         border-radius: 10px;
         cursor: pointer;
     }
 
-    .final-message {
-        color: white;
-        font-size: 120px;
-        text-align: center;
+    .final-screen {
+        height: 100vh;
         width: 100%;
-        height: 50vh;
+        background: linear-gradient(135deg, #ff758c, #ff7eb3);
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+        color: white;
+        text-align: center;
+        font-family: 'Pacifico', cursive;
+    }
+
+    .final-text {
+        font-size: 110px;
+        margin-bottom: 20px;
+    }
+
+    .final-screen img {
+        width: 320px;
+        max-width: 85%;
+        border-radius: 30px;
+        box-shadow: 0 25px 50px rgba(0,0,0,0.35);
+    }
+
+    .final-sub {
+        font-size: 42px;
+        margin-top: 20px;
     }
 </style>
 </head>
@@ -81,9 +100,10 @@
 <div class="popup">
     <h1>Will you be my Valentine?</h1>
 
-    <!-- Your image -->
-    <img src="image.png" class="image">
+    <!-- Popup image -->
+    <img src="image.png" alt="love image">
 
+    <br>
     <button class="yes" onclick="yesClicked()">YES</button>
 </div>
 
@@ -92,42 +112,19 @@
 <script>
 function yesClicked() {
     document.body.innerHTML = `
-        <div style="
-            height:100vh;
-            background:linear-gradient(135deg,#ff758c,#ff7eb3);
-            display:flex;
-            flex-direction:column;
-            justify-content:center;
-            align-items:center;
-            color:white;
-            font-family:'Pacifico',cursive;
-            text-align:center;
-        ">
-            <div style="font-size:100px; margin-bottom:20px;">
-                Lucky You ❤️
-            </div>
-
-            <img src="us.jpg" style="
-                width:300px;
-                max-width:80%;
-                border-radius:25px;
-                box-shadow:0 20px 40px rgba(0,0,0,0.3);
-            ">
-
-            <div style="font-size:40px; margin-top:20px;">
-                Now you’re stuck with me
-            </div>
+        <div class="final-screen">
+            <div class="final-text">Lucky You ❤️</div>
+            <img src="us.jpg">
+            <div class="final-sub">Now you’re stuck with me</div>
         </div>
     `;
-}
-
 }
 
 const noBtn = document.getElementById("noBtn");
 
 function moveButton() {
-    const x = Math.random() * (window.innerWidth - 100);
-    const y = Math.random() * (window.innerHeight - 50);
+    const x = Math.random() * (window.innerWidth - 80);
+    const y = Math.random() * (window.innerHeight - 40);
     noBtn.style.left = x + "px";
     noBtn.style.top = y + "px";
 }
