--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         justify-content: center;
         align-items: center;
         overflow: hidden;
-        background: url("flowers.jpg.png") no-repeat center center/cover;
+        background: url("flowerss.png") no-repeat center center/cover;
     }
 
     /* Dark overlay */
