--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     }
 
     .popup {
-        position: relative;
-        background: rgba(255,255,255,0.95);
+       background: rgba(255,255,255,0.35);
+        backdrop-filter: blur(6px);
         padding: 60px;
         border-radius: 35px;
         text-align: center;
