--- a/index.html
+++ b/index.html
@@ -45,16 +45,19 @@
     }
 
     .popup {
-       background: rgba(255,255,255,0.35);
-        backdrop-filter: blur(6px);
-        padding: 60px;
-        border-radius: 35px;
-        text-align: center;
-        box-shadow: 0 25px 60px rgba(0,0,0,0.3);
-        width: 650px;
-        max-width: 92%;
-        z-index: 2;
-    }
+    position: relative;
+    background: rgba(255,255,255,0.35);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    padding: 60px;
+    border-radius: 35px;
+    text-align: center;
+    box-shadow: 0 25px 60px rgba(0,0,0,0.3);
+    width: 650px;
+    max-width: 92%;
+    z-index: 2;
+}
+
 
     h1 {
         color: #ff4d6d;
